kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-dr-simulator
  namespace: gitops-dr-simulator
  labels:
    app.kubernetes.io/name: gitops-dr-simulator
    app.kubernetes.io/part-of: gitops-dr-simulator
    app.kubernetes.io/component: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gitops-dr-simulator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gitops-dr-simulator
    spec:
      restartPolicy: Always
      containers:
        - name: gitops-dr-simulator
          image: gitops-dr-simulator:local
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
